Updated the href attribute of the nav links to point to index.html instead of /.

--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@ color: rgb(128, 79, 128);
 
         <div class="right">
           <ul>
-            <li><a href="/">Home</li></a>
-            <li><a href="/">About</li></a>
-            <li><a href="/">Projects</li></a>
-            <li><a href="/">Contact me</li></a>
+            <li><a href="index.html">Home</li></a>
+            <li><a href="index.html">About</li></a>
+            <li><a href="index.html">Projects</li></a>
+            <li><a href="index.html">Contact me</li></a>
           </ul>
         </div>
       </nav>
@@ -120,7 +120,7 @@ color: rgb(128, 79, 128);
       <!-- Setup and start animation! -->
   <script>
     var typed = new Typed('#element', {
-      strings: ['Web Developer', 'React Developer','Full stack developer','UI UX Developer !'],
+      strings: ['Web Developer', 'React Developer','Full stack developer','UI and UX Developer !'],
       typeSpeed: 100,
     });
   </script>
