--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
             <div class="leftSection">Hi! My name is <span class="purple">Saurabh</span>
                 <div>and I'm a passionate </div>
                 <span id="element"></span>
-                <div class="buttonDiv">
-                    <button type="button" class="btn">Download Resume</button>
+                <a href="./files/Resume.pdf">
+                  <div class="buttonDiv">
+                    <button type="button" class="btn" id="downloadButton">Download Resume</button>
                     
                 </div>
+                </a>
             </div>
             <div class="rightSection">
                 <img src="assests/bg.png" alt="Deveolper">
