link updated oc contact us

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><a href="index.html">Home</li></a>
             <li><a href="index.html">About</li></a>
             <li><a href="index.html">Projects</li></a>
-            <li><a href="i">Contact me</li></a>
+            <li><a href="index.html">Contact me</li></a>
           </ul>
         </div>
         <div class="burger">
