--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Saurabh | Portfolio</title>
     
+    <link rel="icon" type="image" href="./assests/favicon.ico">
     <link rel="stylesheet" href="style.css">
   </head>
   <style>
