--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
           </div>
           
         </section>
+        <section class="thirdSection">
+          <div class="projectHeader">
+            Projects
+          </div>
+          <div class="projects">
+            projects all
+          </div>
+        </section>
       </main>
     
       <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
